tests/parsing/smtlib/poly/errors/027_let_unopened_var_binding_list_2.expected
File "tests/parsing/smtlib/poly/errors/027_let_unopened_var_binding_list_2.psmt2", line 2, character 13-16:
2 | (assert (let foo true))
                 ^^^
Error while parsing a term, read the symbol 'foo',
      but expected a variable binding list, starting with an opening
      parenthesis.
